--- a/tstrippy/data/pouliasis2017pii.yaml
+++ b/tstrippy/data/pouliasis2017pii.yaml
@@ -9,7 +9,7 @@ components:
     units:
       a: kpc
       M: Msun
-      exp: unitless
+      exp: ''
       cutoffradius: kpc
   - name: miyamotonagai
     parameters:
