--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,5 +12,6 @@ python:
     - method: pip
       path: .
     - requirements: docs/requirements.txt
-    - method: pip
-      path: numpy    
+
+pre_install:
+  - pip install numpy
