--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,11 +7,8 @@ build:
 sphinx:
   configuration: docs/source/conf.py
 
-python:
-  install:
-    - method: pip
-      path: .
-    - requirements: docs/requirements.txt
-
-pre_install:
-  - pip install numpy
+# python:
+  # install:
+    # - method: pip
+      # path: .
+    # - requirements: docs/requirements.txt
