--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,12 +3,15 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "miniconda3-4.9.2"
+
+conda:
+  environment: environment.yml
 
 sphinx:
   configuration: docs/source/conf.py
 
-python:
-  install:
-    - method: conda
-      file: environment.yml
+# python:
+#   install:
+#     - method: conda
+#       file: environment.yml
