--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,15 +3,11 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "mambaforge-22.9"
+    python: "3.11"
 
-conda:
-  environment: environment.yml
+python:
+  install:
+    - requirements: requirements.txt
 
 sphinx:
   configuration: docs/source/conf.py
-
-# python:
-#   install:
-#     - method: conda
-#       file: environment.yml
