--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,13 +1,16 @@
 version: 2
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-20.04
   tools:
-    python: "3.11"
-
-python:
-  install:
-    - requirements: requirements.txt
+    python: "3.9"
+  jobs:
+    conda: environment.yml
 
 sphinx:
   configuration: docs/source/conf.py
+
+python:
+  install:
+    - method: pip
+      path: .
