--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,8 +4,8 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
-  jobs:
-    conda: environment.yml
+  conda:
+    file: environment.yml
 
 sphinx:
   configuration: docs/source/conf.py
