--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,17 +1,10 @@
 version: 2
-
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
-    python: "mambaforge-22.9"
-
-conda:
-  environment: environment.yml
-
-sphinx:
-  configuration: docs/source/conf.py
-
+    python: "3.9"
 python:
   install:
-    - method: pip
-      path: .
+    - requirements: requirements.txt
+sphinx:
+  configuration: docs/source/conf.py
