--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,8 @@ dependencies:
   - numpy==1.22
   - gcc==11.2.0
   - gfortran  
+  - meson
+  - ninja
   - setuptools=68.2
   - astropy==5.0
   - matplotlib==3.5
