it compiles and works! at least the python import works

--- a/meson.build
+++ b/meson.build
@@ -6,8 +6,9 @@ project('tstrippy', 'fortran',
 # Define package name variable to avoid repetition
 pkg_name = 'tstrippy'
 
-
+# Find Python and f2py
 py = import('python').find_installation()
+f2py = find_program('f2py3', 'f2py')
 fc_args = ['-fPIC']
 
 # Get the Python site-packages directory
@@ -17,43 +18,61 @@ from distutils.sysconfig import get_python_lib
 print(get_python_lib())
 '''
 
-# Keep your existing install_dir setup for site-packages directory
-install_dir = run_command('python', '-c', python_code, check: true).stdout().strip()
+# Get Python extension suffix for module naming
+ext_suffix_code = '''
+import sysconfig
+print(sysconfig.get_config_var('EXT_SUFFIX'))
+'''
+
+install_dir = run_command(py, '-c', python_code, check: true).stdout().strip()
+ext_suffix = run_command(py, '-c', ext_suffix_code, check: true).stdout().strip()
 message('Python install dir: ' + install_dir)
+message('Python extension suffix: ' + ext_suffix)
 
-# Define package name variable to avoid repetition
-pkg_name = 'tstrippy'
+# Build extension modules with f2py using custom targets
 
-# For extension modules, install them to the 'lib' subdirectory of your package
-constants_ext = py.extension_module('constants',
-    sources: 'tstrippy/src/constants.f90',
+f2py_compiler = '--fcompiler=gnu95'
+f2py_f90flags = '--f90flags=-Wno-unused-variable -fPIC'
+
+
+constants_sources = ['tstrippy/src/constants.f90']
+constants_out = 'constants' + ext_suffix
+constants_build = custom_target('constants',
+    output: constants_out,
+    input: constants_sources,
+    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'constants'],
     install: true,
-    install_dir: install_dir / pkg_name / 'lib',
-    fortran_args: fc_args
+    install_dir: install_dir / pkg_name / 'lib'
 )
 
-potentials_ext = py.extension_module('potentials',
-    sources: [
-        'tstrippy/src/constants.f90', 
-        'tstrippy/src/potentials.f90'
-    ],
+potentials_sources = [
+    'tstrippy/src/constants.f90',
+    'tstrippy/src/potentials.f90'
+]
+potentials_out = 'potentials' + ext_suffix
+potentials_build = custom_target('potentials',
+    output: potentials_out,
+    input: potentials_sources,
+    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'potentials'],
     install: true,
-    install_dir: install_dir / pkg_name / 'lib',
-    fortran_args: fc_args
+    install_dir: install_dir / pkg_name / 'lib'
 )
 
-integrator_ext = py.extension_module('integrator',
-    sources: [
-        'tstrippy/src/constants.f90',
-        'tstrippy/src/potentials.f90',
-        'tstrippy/src/perturbers.f90',
-        'tstrippy/src/hostperturber.f90',
-        'tstrippy/src/galacticbar.f90',
-        'tstrippy/src/integrator.f90'
-    ],
+integrator_sources = [
+    'tstrippy/src/constants.f90',
+    'tstrippy/src/potentials.f90',
+    'tstrippy/src/perturbers.f90',
+    'tstrippy/src/hostperturber.f90',
+    'tstrippy/src/galacticbar.f90',
+    'tstrippy/src/integrator.f90'
+]
+integrator_out = 'integrator' + ext_suffix
+integrator_build = custom_target('integrator',
+    output: integrator_out,
+    input: integrator_sources,
+    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'integrator'],
     install: true,
-    install_dir: install_dir / pkg_name / 'lib',
-    fortran_args: fc_args
+    install_dir: install_dir / pkg_name / 'lib'
 )
 
 # Then install Python files to their proper directories
