successful build without warnings!

--- a/meson.build
+++ b/meson.build
@@ -29,10 +29,14 @@ ext_suffix = run_command(py, '-c', ext_suffix_code, check: true).stdout().strip(
 message('Python install dir: ' + install_dir)
 message('Python extension suffix: ' + ext_suffix)
 
-# Build extension modules with f2py using custom targets
+# # Build extension modules with f2py using custom targets
+# f2py_compiler = '--fcompiler=gnu95'
+# f2py_f90flags = '--f90flags=-Wno-unused-variable -fPIC'
 
-f2py_compiler = '--fcompiler=gnu95'
-f2py_f90flags = '--f90flags=-Wno-unused-variable -fPIC'
+# Setup environment for f2py
+fc_env = environment()
+fc_env.set('FC', 'gfortran')
+fc_env.set('FFLAGS', '-Wno-unused-variable -fPIC')
 
 
 constants_sources = ['tstrippy/src/constants.f90']
@@ -40,7 +44,8 @@ constants_out = 'constants' + ext_suffix
 constants_build = custom_target('constants',
     output: constants_out,
     input: constants_sources,
-    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'constants'],
+    command: [f2py, '-c', '@INPUT@', '--quiet', '-m', 'constants'],
+    env: fc_env,
     install: true,
     install_dir: install_dir / pkg_name / 'lib'
 )
@@ -53,7 +58,8 @@ potentials_out = 'potentials' + ext_suffix
 potentials_build = custom_target('potentials',
     output: potentials_out,
     input: potentials_sources,
-    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'potentials'],
+    command: [f2py, '-c', '@INPUT@', '--quiet', '-m', 'potentials'],
+    env: fc_env,
     install: true,
     install_dir: install_dir / pkg_name / 'lib'
 )
@@ -70,7 +76,8 @@ integrator_out = 'integrator' + ext_suffix
 integrator_build = custom_target('integrator',
     output: integrator_out,
     input: integrator_sources,
-    command: [f2py, '-c', '@INPUT@', '--quiet', f2py_compiler, f2py_f90flags, '-m', 'integrator'],
+    command: [f2py, '-c', '@INPUT@', '--quiet', '-m', 'integrator'],
+    env: fc_env,
     install: true,
     install_dir: install_dir / pkg_name / 'lib'
 )
