--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,18 @@
 [build-system]
-requires = ["meson-python", "numpy"]
+requires = ["meson-python>=0.13.0", "numpy>=1.20.0"]
 build-backend = "mesonpy"
+
+[project]
+name = "tstrippy"
+version = "0.0.1"
+description = "TIDAL-STRIPPING-PYTHON: Tidal stripping simulations"
+readme = "README.md"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+requires-python = ">=3.9"
+dependencies = [
+    "numpy>=1.20.0",
+    "astropy>=4.0",
+    "pyyaml>=5.1",
+]
