not installing with pip yet

--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,6 @@ dependencies:
   - pyyaml>=5.1
   - gfortran>=11  # Critical for running the compiled code
   - pip
-  - pip:
-    - git+https://github.com/salvatore-ferrone/tstrippy.git
+  - meson # will get rid of this once the meson package is available on conda-forge
+  # - pip:
+    # - git+https://github.com/salvatore-ferrone/tstrippy.git
